# adventOfCode

./: README.md  pyproject.toml
src/: day1.py  day2.py  day3.py  day4.py  day5.py
src/2023/: day1.py  day5.py  day6.py
src/2023/utils/: constants.py  utils.py
src/2024/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  utils.py
